MSVSCPP_FILES = \
	cpath_test_error/cpath_test_error.vcproj \
	cpath_test_path/cpath_test_path.vcproj \
	cpath_test_support/cpath_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libuna/libuna.vcproj \
	libcpath.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

