MSVSCPP_FILES = \
	cpath_test_error/cpath_test_error.vcproj \
	cpath_test_path/cpath_test_path.vcproj \
	cpath_test_support/cpath_test_support.vcproj \
	cpath_test_system_string/cpath_test_system_string.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libuna/libuna.vcproj \
	libcpath.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

